# English-Learning-Agent

./: README.md  main.py  pyproject.toml
src/: agent.py  app.py  config.py  transcription.py  tts.py  utils.py
src/static/: index.html
